# SleepSync

./: .gitignore  LICENSE  README.md
client/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js
client/src/: input.css  main.tsx  output.css
client/src/auth/: AuthRedirect.tsx  ProtectedRoute.tsx
client/src/components/: icons.tsx  mobile-frame.tsx  theme-provider.tsx  theme-toggle.tsx
client/src/components/assessment/: question-slide.tsx  sleep-assessment.tsx
client/src/components/auth/: auth-layout.tsx  forgot-password-form.tsx  sign-in-form.tsx  sign-up-form.tsx
client/src/components/home/: alarm-sounds.tsx  bedtime-reminder.tsx  quick-actions.tsx  sleep-schedule-clock.tsx  sleep-schedule.tsx
client/src/components/journal/: sleep-chart.tsx  sleep-stats.tsx
client/src/components/layout/: bottom-nav.tsx
client/src/components/sleep/: alarm-setup.tsx  sleep-sounds.tsx  sleep-tracker.tsx
client/src/hooks/: use-toast.ts
client/src/pages/: OnboardingPage.tsx  account.tsx  forgot-password.tsx  home.tsx  journal.tsx  layout.tsx  not-found.tsx  report.tsx  sign-in.tsx  sign-up.tsx  sleep.tsx  sounds.tsx
client/src/providers/: theme-provider.tsx
client/src/services/: auth.ts
client/src/store/: AuthStore.tsx
client/tests/: insights.spec.ts  login.spec.ts  navigation.spec.ts  sleep.spec.ts
client/tests/components/: insights.spec.ts  login.spec.ts  sleep.spec.ts
server/: Cargo.toml
server/src/: auth.rs  db.rs  jwt.rs  main.rs  models.rs
server/tests/: end-to-end.rs
server/tests/common/: mod.rs
(+3 files in other folders)
