[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-rt = "2.10.0"
actix-web = "4.9.0"
argon2 = "0.5.3"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
mongodb = "3.2.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-actix-web = "0.7.15"
tracing-subscriber = "0.3.19"

[dev-dependencies]
assert-json-diff = "2.0.2"